grammar.js
    source_file: ($) =>
      repeat(
        choice(
          $.use_declaration,
          $.catalog_contribution,
          $.enum_definition,
          $.protocol_definition,
          $.extension_definition,
          $.structure_definition,
          $.function_definition,
          $.test_definition,
          $.foreign_function_declaration,
          $.native_function_declaration,
          $.native_resource_declaration,
          $.public_declaration,
          $.package_declaration,
          $.module_declaration,
          $.local_declaration,
        ),
      ),

    catalog_contribution: ($) =>
      seq(
        "contribute",
        field("catalog", choice($.qualified_name, $.identifier)),
        "{",
        repeat1($.catalog_reexport),
        "}",
      ),

    catalog_reexport: ($) =>
      seq(
        "public",
        "use",
        field("declaration", choice($.qualified_name, $.identifier)),
        optional(seq("as", field("alias", $.identifier))),
        choice(";", $._automatic_semicolon),
      ),

    enum_definition: ($) =>
      seq(
        "enum",
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameter_list)),
        optional(seq(":", field("raw_type", $.raw_enum_type))),
        "{",
        repeat1($.enum_variant),
        "}",
      ),

    enum_variant: ($) =>
      seq(
        field("name", $._contextual_variant_name),
        optional(
          field(
            "associated_types",
            seq("(", $.type, repeat(seq(",", $.type)), ")"),
          ),
        ),
        optional(seq("=", field("raw_value", choice($.signed_integer_literal, $.string_literal)))),
        choice(";", $._automatic_semicolon),
      ),

    qualified_name: ($) =>
      seq($.identifier, repeat1(seq(".", $.identifier))),

    structure_definition: ($) =>
      seq(
        choice(
          seq(optional(field("structure_modifier", "static")), "struct"),
          seq(optional(field("class_modifier", choice("static", "intrinsic", "nocopy"))), "class"),
        ),
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameter_list)),
        optional(
          seq(
            ":",
            field(
              "supertypes",
              seq($.named_type, repeat(seq(",", $.named_type))),
            ),
          ),
        ),
        "{",
        repeat(
          choice(
            seq(
              optional(field("visibility", choice("private", "package", "module", "local", "protected", "public"))),
              $.structure_definition,
            ),
            seq(
              optional(field("visibility", choice("private", "package", "module", "local", "protected", "public"))),
              optional(field("static", "static")),
              $.structure_field,
            ),
            seq(optional(field("visibility", choice("private", "package", "module", "local", "protected", "public"))), $.constructor_definition),
            $.drop_definition,
            seq(
              optional(field("override", "override")),
              optional(field("visibility", choice("private", "package", "module", "local", "protected", "public"))),
              optional(field("static", "static")),
              $.function_definition,
            ),
          ),
        ),
        "}",
      ),

    function_definition: ($) =>
      seq(
        "func",
        field("name", choice($._contextual_member_name, $.operator_function_name)),
        optional(field("type_parameters", $.type_parameter_list)),
        $.parameter_list,
        optional(field("return_type", choice($.void_type, $.borrowed_return_type, $.type))),
        choice(field("body", $.block), choice(";", $._automatic_semicolon)),
      ),

    builtin_type: (_) =>
      choice(
        "int",
        "int8",
        "int16",
        "int32",
        "int64",
        "uint",
        "uint8",
        "uint16",
        "uint32",
        "uint64",
        "float",
        "float32",
        "float64",
        "bool",
        "str",
      ),
    _expression_generic_type: ($) =>
      prec(
        PREC.member + 1,
        seq(
          field("name", alias(choice($.identifier, $.qualified_name), $.type_identifier)),
          field("arguments", alias($._expression_type_argument_list, $.type_argument_list)),
        ),
      ),
    _expression_qualified_generic_type: ($) =>
      prec.left(
        PREC.member + 3,
        seq(
          field("owner", alias($._expression_generic_type, $.generic_type)),
          repeat1(
            seq(
              ".",
              field(
                "member",
                choice(
                  alias($.identifier, $.type_identifier),
                  alias($._expression_generic_type_segment, $.generic_type_segment),
                ),
              ),
            ),
          ),
        ),
      ),
    named_type: ($) =>
      choice(
        alias(choice($.identifier, $.qualified_name), $.type_identifier),
        $.generic_type,
        $.qualified_generic_type,
      ),
    type: ($) => choice($.optional_type, $.array_type, $.view_type, $.tuple_type, $.grouped_type, $.function_type, $.builtin_type, $.named_type),
    parameter_list: ($) =>
      seq("(", optional(seq($.parameter, repeat(seq(",", $.parameter)))), ")"),

    parameter: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        optional(choice(field("read_reference", "@"), field("mutable_reference", "&"))),
        field("type", $.type),
        optional(seq("=", field("default", $.expression))),
      ),

    block: ($) => seq("{", repeat($.statement), "}"),

    statement: ($) =>
      choice(
        seq(
          choice(
            $.variable_declaration,
            $.assignment_statement,
            $.update_statement,
            $.print_statement,
            $.assert_statement,
            $.panic_statement,
            $.return_statement,
            $.break_statement,
            $.continue_statement,
            $.expression_statement,
          ),
          choice(";", $._automatic_semicolon),
        ),
        $.if_statement,
        $.while_statement,
        $.mutex_statement,
        $.anonymous_scope,
        $.for_statement,
        $.match_expression,
      ),

    variable_declaration: ($) =>
      seq(
        field("mutability", choice("let", "var")),
        choice(
          seq(
            field("name", $.identifier),
            choice(
              seq($.type_annotation, optional(seq("=", field("initializer", $.expression)))),
              seq("=", field("initializer", $.expression)),
            ),
          ),
          seq(field("bindings", $.tuple_binding_pattern), "=", field("initializer", $.expression)),
        ),
      ),

    assignment_statement: ($) =>
      seq(
        field("left", choice($.identifier, $.member_expression, $.safe_member_expression, $.index_expression)),
        field("operator", choice("=", "+=", "-=", "*=", "/=", "%=")),
        field("right", $.expression),
      ),

    return_statement: ($) => seq("return", optional(field("value", $.expression))),

    expression_statement: ($) =>
      choice(
        $.try_expression,
        $.invocation_expression,
        $.super_method_expression,
        $.safe_member_expression,
        $.cascade_expression,
      ),

    expression: ($) =>
      choice(
        $.binary_expression,
        $.try_expression,
        $.copy_expression,
        $.move_expression,
        $.read_reference_expression,
        $.unary_expression,
        $.forced_optional_expression,
        $.mutable_reference_expression,
        $.conversion_expression,
        $.lambda_expression,
        $.match_expression,
        $.invocation_expression,
        $.super_method_expression,
        $.cascade_expression,
        $.sequence_literal,
        $.tuple_expression,
        $.member_expression,
        $.safe_member_expression,
        $.index_expression,
        $.slice_expression,
        $.parenthesized_expression,
        $.string_literal,
        $.float_literal,
        $.integer_literal,
        $.boolean_literal,
        $.null_literal,
        $.self_expression,
        $.identifier,
      ),

    match_expression: ($) =>
      seq(
        "match",
        field("subject", $.expression),
        "{",
        repeat1($.match_branch),
        "}",
      ),

    match_branch: ($) =>
      seq(
        choice(
          seq(
            field("variant", $._contextual_variant_name),
            optional(field("bindings", $.match_binding_list)),
          ),
          field("default", "else"),
        ),
        optional(field("guard", seq("if", $.expression))),
        "=>",
        field(
          "body",
          choice(
            seq($.block, optional(choice(";", $._automatic_semicolon))),
            seq($.expression, choice(";", $._automatic_semicolon)),
          ),
        ),
      ),

    cascade_expression: ($) =>
      prec.left(
        PREC.member,
        seq(
          field("receiver", $._cascade_receiver),
          choice(
            repeat1($.cascade_operation),
            seq(
              repeat($.cascade_operation),
              alias($.cascade_method_operation, $.cascade_operation),
              repeat1($.cascade_terminal_operation),
            ),
          ),
        ),
      ),

    _cascade_receiver: ($) =>
      choice(
        $.identifier,
        $.self_expression,
        $.invocation_expression,
        $.member_expression,
        $.safe_member_expression,
        $.index_expression,
        $.slice_expression,
        $.sequence_literal,
        $.string_literal,
        $.float_literal,
        $.integer_literal,
        $.boolean_literal,
        $.parenthesized_expression,
        $.lambda_expression,
      ),

    cascade_operation: ($) =>
      seq(
        field("operator", ".."),
        choice($.cascade_method_call, $.cascade_field_assignment),
      ),

    cascade_method_call: ($) =>
      seq(
        field("method", $._contextual_member_name),
        "(",
        optional($._invocation_arguments),
        ")",
      ),

    member_expression: ($) =>
      choice(
        prec(
          PREC.member + 2,
          seq(
            field("object", alias($._expression_qualified_generic_type, $.qualified_generic_type)),
            ".",
            field("field", $._contextual_member_name),
          ),
        ),
        prec(
          PREC.member + 1,
          seq(
            field("object", alias($._expression_generic_type, $.generic_type)),
            ".",
            field("field", $._contextual_member_name),
          ),
        ),
        prec.left(
          PREC.member,
          seq(
            field(
              "object",
              choice(
                $.identifier,
                $.generic_type,
                $.self_expression,
                $.invocation_expression,
                $.member_expression,
                $.safe_member_expression,
                $.index_expression,
                $.slice_expression,
                $.sequence_literal,
                $.string_literal,
                $.float_literal,
                $.integer_literal,
                $.boolean_literal,
                $.parenthesized_expression,
              ),
            ),
            ".",
            field("field", $._contextual_member_name),
          ),
        ),
      ),

    safe_member_expression: ($) =>
      prec.left(
        PREC.member,
        seq(
          field(
            "object",
            choice(
              $.identifier,
              $.self_expression,
              $.invocation_expression,
              $.member_expression,
              $.safe_member_expression,
              $.index_expression,
              $.slice_expression,
              $.sequence_literal,
              $.string_literal,
              $.float_literal,
              $.integer_literal,
              $.boolean_literal,
              $.null_literal,
              $.parenthesized_expression,
            ),
          ),
          "?.",
          field("field", $._contextual_member_name),
        ),
      ),

    invocation_expression: ($) =>
      choice(
        prec(
          PREC.member + 2,
          seq(
            field("target", alias($._expression_qualified_generic_type, $.qualified_generic_type)),
            "(",
            optional($._invocation_arguments),
            ")",
          ),
        ),
        prec(
          PREC.member + 1,
          seq(
            field("target", alias($._expression_generic_type, $.generic_type)),
            "(",
            optional($._invocation_arguments),
            ")",
          ),
        ),
        seq(
          field(
            "target",
            choice(
              $.identifier,
              $.qualified_name,
              $.generic_type,
              $.parenthesized_expression,
              $.lambda_expression,
              $.member_expression,
              $.safe_member_expression,
              $.index_expression,
            ),
          ),
          "(",
          optional($._invocation_arguments),
          ")",
        ),
      ),

    _invocation_arguments: ($) =>
      seq(
        choice($.expression, $.field_initializer),
        repeat(seq(",", choice($.expression, $.field_initializer))),
        optional(","),
      ),

    binary_expression: ($) =>
      choice(
        prec.right(
          PREC.coalesce,
          seq(
            field("left", $.expression),
            field("operator", "??"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.logicalOr,
          seq(
            field("left", $.expression),
            field("operator", "||"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.logicalAnd,
          seq(
            field("left", $.expression),
            field("operator", "&&"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.equality,
          seq(
            field("left", $.expression),
            field("operator", choice("==", "!=")),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.comparison,
          seq(
            field("left", $.expression),
            field("operator", choice("<", "<=", ">", ">=")),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.bitXor,
          seq(
            field("left", $.expression),
            field("operator", "^"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.bitAnd,
          seq(
            field("left", $.expression),
            field("operator", "&"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.shift,
          seq(
            field("left", $.expression),
            field("operator", choice("<<", ">>")),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.additive,
          seq(
            field("left", $.expression),
            field("operator", choice("+", "-")),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.multiplicative,
          seq(
            field("left", $.expression),
            field("operator", choice("*", "/", "%")),
            field("right", $.expression),
          ),
        ),
      ),

    copy_expression: ($) =>
      prec(PREC.unary, seq("copy", field("operand", $.expression))),

    move_expression: ($) =>
      prec(PREC.unary, seq("move", field("operand", $.expression))),

    _literal_dollar: (_) => token.immediate("$"),

    _string_content: (_) => token.immediate(/[^"\\$\n\r]+/),

    _block_string_content: (_) => token.immediate(/[^"\\$]+/),

    boolean_literal: (_) => choice("true", "false"),
